[package]
name = "porty"
version = "0.1.0"
edition = "2024"
description = "Lightweight port managing CLI application for macOS"
homepage = "https://github.com/literallyNotFate/porty"
repository = "https://github.com/literallyNotFate/porty"
keywords = ["port", "cli", "clap", "port-manager"]
categories = ["command-line-utilities", "utilities"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
comfy-table = "7.2"
colored = "3.0"
sysinfo = "0.39"
